<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo"
            android:layout_margin="70dp"
            android:layout_gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="#7E5109"
            app:hintTextColor="#7E5109"
            android:hint="E-mail">
            <EditText
                android:id="@+id/log_txt_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:layout_marginHorizontal="50dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="#7E5109"
            app:hintTextColor="#7E5109"
            android:hint="@string/log_txt_clave">
            <EditText
                android:id="@+id/log_txt_clave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="50"
                android:layout_marginHorizontal="50dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <CheckBox
                android:id="@+id/log_chk_recordar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_chk_recordar"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/log_btn_ingresar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_btn_ingresar"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:layout_marginRight="30dp"
                android:backgroundTint="#664403"/>
            <Button
                android:id="@+id/log_btn_salir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_btn_salir"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:layout_marginLeft="30dp"
                android:backgroundTint="#664403"/>
        </LinearLayout>

        <TextView
            android:id="@+id/log_lbl_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_lbl_registrarse"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textColor="#2E86C1"/>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="bottom">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/log_txt_derechos" />
        </RelativeLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>