<?xml version="1.0" encoding="utf-8"?>
<android.widget.ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.RegTuyoFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frag_reg_tuyo"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            android:textColor="#184A6B"
            android:layout_marginTop="10dp"/>
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logoform"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:background="#0000"/>

        <EditText
            android:id="@+id/frag_reg_tuyo_txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name"
            android:maxLength="50"
            android:layout_marginHorizontal="35dp"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/frag_reg_tuyo_txt_tipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Kind of food"
            android:maxLength="50"
            android:layout_marginHorizontal="35dp"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/frag_reg_tuyo_txt_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Phone"
            android:maxLength="9"
            android:layout_marginHorizontal="35dp"
            android:layout_marginBottom="10dp"
            android:inputType="phone"/>
        <EditText
            android:id="@+id/frag_reg_tuyo_txt_direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Location"
            android:maxLength="50"
            android:layout_marginHorizontal="35dp"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/frag_reg_tuyo_txt_comentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Note"
            android:maxLength="100"
            android:layout_marginHorizontal="35dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/frag_reg_tuyo_btn_registrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frag_reg_tuyo_btn_registrar"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:layout_marginRight="30dp"
                android:backgroundTint="#184A6B"/>
            <Button
                android:id="@+id/frag_reg_tuyo_btn_regresar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frag_reg_tuyo_btn_regresar"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:layout_marginLeft="30dp"
                android:backgroundTint="#184A6B"/>
        </LinearLayout>

    </LinearLayout>
</android.widget.ScrollView>